--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "react-boiler-plate",
+  "name": "react-jest-webpack-express-template",
   "version": "1.0.0",
   "description": "react boiler plate code",
   "main": "src/App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "startdev": "webpack-dev-server --mode=development",
-    "start": "node server/index.js",
-    "build": "rimraf dist && mkdir dist && webpack --mode=production"
+    "test": "jest --coverage",
+    "dev": "nodemon  --ignore './client/' --exec babel-node server/index.js",
+    "start": "node build/index.js",
+    "build": "rimraf dist && mkdir dist && webpack --mode=production && babel server --copy-files --out-dir build"
   },
   "repository": {
     "type": "git",
@@ -20,23 +20,49 @@
   },
   "homepage": "https://github.com/kevoese/react-webpack-boilerplate#readme",
   "devDependencies": {
+    "@babel/cli": "^7.7.5",
     "@babel/core": "^7.7.2",
+    "@babel/node": "^7.7.4",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0"
+    "@babel/preset-react": "^7.7.0",
+    "cross-env": "^6.0.3",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
+    "terser-webpack-plugin": "^1.3.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "body-parser": "^1.19.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "express": "^4.17.1",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "pg": "^7.14.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "sass-loader": "^8.0.0",
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
