--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,5 @@
 		"@babel/plugin-proposal-class-properties",
 		"@babel/plugin-transform-runtime"
 	],
-	"ignore": ["./dist"]
+	"ignore": ["./build/public"]
 }
