--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "react-jest-webpack-express-template",
   "version": "1.0.0",
   "description": "react boiler plate code",
-  "main": "src/App.js",
+  "main": "client/App.js",
   "scripts": {
-    "test": "jest --coverage",
-    "dev": "cross-env NODE_ENV=deelopment && nodemon  --ignore './client/' --exec babel-node server/index.js",
+    "tailwind:css": "postcss client/styles/tailwind.src.css -c tailwind.config.js -o client/styles/tailwind.css",
+    "purgecss": "purgecss -c purgecss.config.js -o client/styles/purged",
+    "test": "cross-env NODE_ENV=test jest --coverage",
+    "dev": "cross-env NODE_ENV=development nodemon  --ignore './client/' --exec babel-node server/index.js",
     "start": "cross-env NODE_ENV=production node build/index.js",
-    "build": "cross-env NODE_ENV=production && npm run build:client && babel server --copy-files --out-dir build",
-    "build:client": "webpack --mode=production"
+    "build": "cross-env NODE_ENV=production npm run build:client && babel server --copy-files --out-dir build",
+    "build:client": "rimraf build && webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -28,12 +30,16 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "@babel/register": "^7.8.3",
     "cross-env": "^6.0.3",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2",
+    "tailwindcss": "^1.2.0",
     "terser-webpack-plugin": "^1.3.0"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^2.0.6",
+    "autoprefixer": "^9.7.4",
     "axios": "^0.19.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
@@ -52,13 +58,13 @@
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pg": "^7.14.0",
+    "postcss-cli": "^7.1.0",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "sass-loader": "^8.0.0",
-    "sequelize": "^5.21.3",
-    "sequelize-cli": "^5.5.1",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
